# dynamics_wrapper

./: CMakeLists.txt  package.xml  readme.md  setup.py
include/dynamics_wrapper/: kdl_interface.hpp
launch/: robot_description.launch
scripts/: how_to_use.py
src/: _kdl_interface.cpp  kdl_interface.cpp
src/dynamics_wrapper/: __init__.py  _kdl_interface_py.py
